fixed spacing issues in Onboard.css

--- a/src/css/Onboard.css
+++ b/src/css/Onboard.css
@@ -1,52 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 
 .About {
-    color: #0d97ff;
-    font-family: 'Source Sans Pro', sans-serif;
-    line-height: 1.6em;
+color: #0d97ff;
+font-family: 'Source Sans Pro', sans-serif;
+line-height: 1.6em;
 }
 
 .About img {
-    margin-top: 15vh;
-    max-width: 60vw;
-    max-height: 60vh;
+margin-top: 15vh;
+max-width: 60vw;
+max-height: 60vh;
 }
 
 .About h2 {
-    font-family: 'Dancing Script';
-    color: grey;
-    width: 50vw;
-    margin: 20px auto;
+font-family: 'Dancing Script';
+color: grey;
+width: 50vw;
+margin: 20px auto;
 }
 
 .About p {
-    margin: 20px auto;
-    padding: 0 10%;
+margin: 20px auto;
+padding: 0 10%;
 }
 
 .About div {
-    height: 90vh;
+height: 90vh;
 }
 
 div .slider-decorator-2 {
-    height: 5vh;
-    bottom: none;
+height: 5vh;
+bottom: none;
 }
 
 div .slider-decorator-1 {
-    display: none;
-    margin: 150px 30px;
-    color: lightgray;
+display: block;
+margin: 150px 30px;
+color: lightgray;
 }
 
 div .slider-decorator-0 {
-    display: none;
-    margin: 150px 30px;
-    color: lightgray;
+display: block;
+margin: 150px 30px;
+color: lightgray;
 }
 
 .carousel-img{
-    padding:10px;
+padding:10px;
 }
 
 .carousel-text{
@@ -55,32 +55,26 @@ div .slider-decorator-0 {
 }
 
 .mainButton{
-    background: #0d97ff;
-    color: #ffffff;
-    display: inline-block;
-    font-size: 15px;
-    font-family: "CalibreSemibold", helvetica, sans-serif;
-    letter-spacing: 0.5px;
-    height: 10vw;
+background: #0d97ff;
+color: #ffffff;
+display: inline-block;
+font-size: 15px;
+font-family: "CalibreSemibold", helvetica, sans-serif;
+letter-spacing: 0.5px;
+max-height: 40px;
     line-height: 40px;
-    padding: 10px, 50px;
-    margin: 5px 5px;
+    padding: 10px, 25px;
     text-transform: capitalize;
     border: none;
     border-radius: 5px;
 }
 
-.mainButton:hover {
-    background: #ffffff;
-    color: #0d97ff;
-    border: 3px solid #0d97ff;
-}
 .onboard-text{
-    font-size:24px;
+ font-size:24px;
 }
 
 .sign-in{
-    background-color: #fcefe5;
+background-color: #fcefe5;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.81'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 max-height: 400px;
 padding: 50px 60px;
